# MCAS.Opensource

./: .gitignore  AGENT_CARD.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTACT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  app.py  pyproject.toml  requirements-app.txt  requirements-colab.txt
.claude/: README.md
.github/: pull_request_template.md
.well-known/: agent.json
audiences/: README.md  for-academia.md  for-clinicians.md  for-developers.md  for-industry.md  for-nonprofits.md  for-patients.md  for-press.md  for-researchers.md
docs/: cro-outreach-packet.md  deploying-the-viewer.md  disclaimers.md  faq.md  for-mcas-community.md  glossary.md  how_to_contribute.md  methods.md  route-of-administration.md  wet-lab-preregistration-v1.md  wet_lab_protocols.md
experiments/: EXP-001-sfn-seeded-analog-generation.md  EXP-002-ligand-based-target-screening.md  EXP-003-covalent-warhead-scoring.md  EXP-004-admet-qsar.md  EXP-005-multi-objective-ranking.md  EXP-006-known-actives-recovery.md  EXP-007-negative-control-benchmark.md  EXP-008-sensitivity-analysis.md  EXP-009-keap1-vina-docking.md  EXP-010-joint-perturbation-lhs.md  EXP-011-chembl-bioassay-predictor.md  EXP-012-covalent-c151-adduct.md  EXP-013-rl-generation.md  EXP-014-chronic-rescue-dependency.md  EXP-015-audit-retread.md  EXP-016-mast-cell-predictor.md  EXP-017-enamine-availability-check.md  EXP-019-cannabinoids-and-terpenes.md  EXP-020-flavonoids-polyphenols-cannabinoid-acids.md  EXP-021-new-compounds-syk-cox2-catechol.md  EXP-022-sensitivity-lhs-rerun.md  EXPERIMENT_TEMPLATE.md  README.md
(+110 files in other folders)
