[project]
name = "mcas-opensource"
version = "0.1.0"
description = "Open-source hypothesis-generation pipeline for MCAS/MCAD rescue, maintenance, and remission compounds."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "MR Dula Medical (a DBA of MR Dula Enterprise, LLC, Raleigh, NC, USA)" },
  { name = "OpenMCAS contributors" },
]
maintainers = [
  { name = "MR Dula Medical" },
]
keywords = ["MCAS", "MCAD", "mast cell", "drug discovery", "cheminformatics", "open science"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "rdkit>=2023.9",
  "pandas>=2.0",
  "numpy>=1.24",
  "requests>=2.31",
  "tqdm>=4.66",
  "PyTDC>=0.4",
  "jupyterlab>=4.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
qsar = [
  "deepchem>=2.7",
  "scikit-learn>=1.3",
  "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/mrdulasolutions/MCAS.Opensource"
Issues = "https://github.com/mrdulasolutions/MCAS.Opensource/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
